--- a/src/main/resources/static/web/pages/account.html
+++ b/src/main/resources/static/web/pages/account.html
@@ -12,60 +12,60 @@
 
 <body class=" flex flex-col">
     <div id="app">
-        <header class="w-full">
-            <div class="pb-2 flex flex-row items-center">
-                <img class="w-12 h-12 rounded-md" src="../images/favicon.png" alt="logo">
-                <h2 class="text-lg text-neutral-500 text-center pl-3 ">UNITY BANK</h2>
+        <header class="w-full xl:h-12 flex-col md:flex-row">
+            <div class="pb-2 w-1/4 flex flex-row items-center ">
+                <img class="w-8 h-8 rounded-md" src="../images/favicon.png" alt="logo">
+                <h2 class="text-sm text-center font-bold ">UNITY BANK</h2>
             </div>
-            <ul class="nav-list pt-2 ">
-                <li><a href="http://localhost:8080/web/pages/accounts.html"
-                        class=" text-neutral-500 text-lg">Accounts</a>
-                </li>
-                <li><a href="http://localhost:8080/web/pages/cards.html" class=" text-neutral-500 text-lg">Cards</a>
-                </li>
-                <li><a href="http://localhost:8080/web/pages/loan-application.html" class="text-neutral-500 text-lg">Loans</a></li>
-                <li><a href="http://localhost:8080/web/pages/transfers.html" class=" text-lg">Transactions</a></li>
+            <ul class="nav-list  pt-2 xl:gap-10 xl:w-full 2xl:w-full 2xl:gap-12 2xl:text-xl">
+                <li><a href="http://localhost:8080/web/pages/accounts.html" class="  lg:text-lg">Accounts</a></li>
+                <li><a href="http://localhost:8080/web/pages/cards.html" class="  lg:text-lg">Cards</a></li>
+                <li><a href="http://localhost:8080/web/pages/loan-application.html" class=" lg:text-lg">Loans</a></li>
+                <li><a href="http://localhost:8080/web/pages/transfers.html" class=" lg:text-lg">Transactions</a></li>
+                <li v-on:click="logout()"><img class="w-6 h-6   md:w-10 md:h-10" src="../images/cerrar sesion.png"
+                    alt="cerrar sesion"></li>
             </ul>
-            <a href="" v-on:click="logout()" class="px-6 pt-2"><img class="w-10 h-10" src="../images/cerrar sesion.png"
-                    alt="cerrar sesion"></a>
         </header>
-        <main id="app" class=" min-h-screen flex flex-col pt-10 pb-10 h-1/2">
-            <div id="Banner" class="hidden lg:flex relative ">
-                <img class="h-[360px] w-full object-top object-cover mt-6" src="../images/banner 2-arbolito.jpg"
+        <main id="app" class=" min-h-screen justify-center items-center flex flex-col lg:pt-10 lg:pb-10 lg:h-1/2">
+            <div id="Banner" class="w-full hidden lg:flex relative ">
+                <img class="h-[360px] w-full  object-cover mt-6" src="../images/banner3-ahorros.jpg"
                     alt="banner" id="bannerImg">
             </div>
-            <h1 class="w-full text-3xl text-center font-semibold pt-10 pb-3 ">Your account select, {{data.firstName}}
+            <h1 class="w-full text-sm  md:text-2xl lg:text-3xl text-center font-semibold lg:pt-10 ">Your account select, {{data.firstName}}
             </h1>
-            <div class="flex flex-col justify-around md:flex-row">
-                <div class="flex flex-col w-1/2 pl-2  md:flex-row md:justify-center md:pt-10">
+            <div class="w-full flex flex-col xl:justify-between items-center justify-around xl:flex-row">
+                <div class="flex flex-col lg:w-1/2 pl-2  md:flex-row md:justify-center md:pt-10">
                     <article
-                        class="flex flex-col border border-black items-center px-2 w-[300px] h-[180px] gap-4 rounded-md">
-                        <h2 class="text-lg font-semibold pt-2">Account Number: {{account.number}}</h2>
-                        <h2 class="text-lg font-semibold">Amount:</h2>
-                        <p class="text-xl font-semibold">{{formatBudget(account.balance)}}</p>
-                        <h2 class="text-lg font-semibold">Creation Date: {{account.creationDate}}</h2>
+                        class="flex flex-col border border-black items-center px-2 w-[220px] h-[150px] md:w-[300px] md:h-[180px] gap-4 rounded-md">
+                        <h2 class="text-xs md:text-lg font-semibold pt-2">Account Number: {{account.number}}</h2>
+                        <h2 class="text-xs md:text-lg font-semibold">Amount:</h2>
+                        <p class="text-xs md:text-lg font-semibold">{{formatBudget(account.balance)}}</p>
+                        <h2 class="text-xs md:text-lg font-semibold">Creation Date: {{account.creationDate}}</h2>
                     </article>
                 </div>
-                <div class="flex flex-col w-1/2 justify-center items-center">
-                    <h2 class="w-full text-2xl  font-medium  pb-3 md:pl-28">Transactions Resume</h2>
-                    <table class="w-[300px] text-xs md:w-[660px] border md:text-lg text-left overflow-x-auto">
+                <div class="flex flex-col pt-2 lg:w-1/2 justify-center items-center">
+                    <h2 class="w-full text-sm font-bold md:text-2xl pb-3 ">Transactions Resume</h2>
+                    <table class="w-[300px] justify-center text-xs gap-1 md:w-[660px] border md:text-lg text-left overflow-x-auto">
                         <thead>
                             <tr class="bg-orange-100">
-                                <th>Type</th>
-                                <th>Amount</th>
-                                <th>Data</th>
-                                <th>Description</th>
+                                <th class="w[30px] md:w-[150px] pl-3">Data</th>
+                                <th class="w-[50px] md:w-[180px]">Description</th>
+                                <th class="pl-2 md:w-[150px]">Type</th>
+                                <th class="w-[50px] md:w-[180px]">Amount</th>
                             </tr>
                         </thead>
                         <tbody>
                             <template v-if="transactions.length > 0" v-for="transaction in transactions">
-                                <tr class="border-t-2 border-b-0 bg-orange-200">
-                                    <td v-if="transaction.type === 'CREDIT'" class="text-green-800 font-semibold">
-                                        {{transaction.type}}</td>
-                                    <td v-else class="text-red-700 font-semibold">{{transaction.type}}</td>
-                                    <td>{{formatBudget(transaction.amount)}}</td>
-                                    <td>{{transaction.date}}</td>
-                                    <td>{{transaction.description}}</td>
+                                <tr class="border-t-2 border-b-0  bg-orange-200">
+                                    <td class="w[30px] md:w-[150px] pl-3">
+                                        <span>{{ formatDate(transaction.date) }}</span>
+                                        <br />
+                                        <span>{{ formatTime(transaction.date) }}</span>
+                                    </td>
+                                    <td class="w-[50px] md:w-[180px]">{{transaction.description}}</td>
+                                    <td v-if="transaction.type === 'CREDIT'" class="text-green-800 font-semibold md:w-[150px] ">{{transaction.type}}</td>
+                                    <td  v-else class="text-red-700 font-semibold md:w-[150px]">{{transaction.type}}</td>
+                                    <td class="w-[50px] md:w-[180px]">{{formatBudget(transaction.amount)}}</td>
                                 </tr>
                             </template>
                         </tbody>
@@ -73,17 +73,17 @@
                 </div>
             </div>
         </main>
-        <footer class="bg-white dark:bg-black">
+        <footer class=" bg-black mt-2">
             <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
                 <div class="md:flex md:justify-between">
                   <div class="flex items-center mb-6 md:mb-0">
-                          <img src="../images/favicon.png" class="h-8 me-3" alt="Logo" />
-                          <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Unity Bank</span>
+                          <img src="../images/favicon.png" class="h-8 w-8 me-3" alt="Logo" />
+                          <span class="self-center text-sm md:text-2xl font-semibold whitespace-nowrap dark:text-white">Unity Bank</span>
                   </div>
                   <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
                       <div>
-                          <h2 class="mb-6 text-lg font-semibold text-gray-900  dark:text-white">Resources</h2>
-                          <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                          <h2 class="mb-6 text-sm md:text-lg font-semibold text-gray-900  dark:text-white">Resources</h2>
+                          <ul class="text-gray-500 text-xs dark:text-gray-400 font-medium">
                               <li class="mb-4">
                                   <a href="#" class="hover:underline">Vue Js</a>
                               </li>
@@ -93,8 +93,8 @@
                           </ul>
                       </div>
                       <div>
-                          <h2 class="mb-6 text-lg font-semibold text-gray-900  dark:text-white">Follow us</h2>
-                          <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                          <h2 class="mb-6 text-sm md:text-lg font-semibold text-gray-900  dark:text-white">Follow us</h2>
+                          <ul class="text-gray-500 text-xs dark:text-gray-400 font-medium">
                               <li class="mb-4">
                                   <a href="#" class="hover:underline ">Github</a>
                               </li>
@@ -104,8 +104,8 @@
                           </ul>
                       </div>
                       <div>
-                          <h2 class="mb-6 text-lg font-semibold text-gray-900 dark:text-white">Legal</h2>
-                          <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                          <h2 class="mb-6 text-sm md:text-lg font-semibold text-gray-900 dark:text-white">Legal</h2>
+                          <ul class="text-gray-500 text-xs dark:text-gray-400 font-medium">
                               <li class="mb-4">
                                   <a href="#" class="hover:underline">Privacy Policy</a>
                               </li>
@@ -118,7 +118,7 @@
               </div>
               <hr class="my-6 border-gray-200 sm:mx-auto dark:border-orange-600 lg:my-8" />
               <div class="sm:flex sm:items-center sm:justify-between">
-                  <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 UNITY BANK. All Rights Reserved.
+                  <span class="text-xs md:text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 UNITY BANK. All Rights Reserved.
                   </span>
                   <div class="flex mt-4 sm:justify-center sm:mt-0">
                       <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
@@ -148,7 +148,7 @@
                   </div>
               </div>
             </div>
-        </footer>
+        </footer
     </div>
     <script type="module" src="../pagesJs/tailwind.config.extension.js"></script>
     <script type="module" src="../pagesJs/tailwind.config.js"></script>
