--- a/src/main/resources/static/web/pages/accounts.html
+++ b/src/main/resources/static/web/pages/accounts.html
@@ -7,55 +7,54 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../pagesCss/style.css">
-    <link rel="stylesheet" href="../pagesCss/styleCarrusel.css">
     <title>Accounts</title>
 </head>
 <body class=" flex flex-col bg-white">
     <div id="app">
-        <header class="w-full">
-            <div class="pb-2 flex flex-row items-center ">
-                <img class="w-12 h-12 rounded-md" src="../images/favicon.png" alt="logo">
-                <h2 class="text-lg text-center pl-3 ">UNITY BANK</h2>
+        <header class="w-full xl:h-12 flex-col md:flex-row">
+            <div class="pb-2 w-1/4 flex flex-row items-center ">
+                <img class="w-8 h-8 rounded-md" src="../images/favicon.png" alt="logo">
+                <h2 class="text-sm text-center  ">UNITY BANK</h2>
             </div>
-            <ul class="nav-list pt-2 ">
-                <li><a href="#" class=" active text-lg">Accounts</a></li>
-                <li><a href="http://localhost:8080/web/pages/cards.html" class="text-lg">Cards</a></li>
-                <li><a href="http://localhost:8080/web/pages/loan-application.html" class="text-lg">Loans</a></li>
-                <li><a href="http://localhost:8080/web/pages/transfers.html" class="text-lg">Transactions</a></li>
+            <ul class="nav-list  pt-2 xl:gap-10 xl:w-full 2xl:w-full 2xl:gap-12 2xl:text-xl">
+                <li><a href="#" class=" active lg:text-lg">Accounts</a></li>
+                <li><a href="http://localhost:8080/web/pages/cards.html" class=" lg:text-lg">Cards</a></li>
+                <li><a href="http://localhost:8080/web/pages/loan-application.html" class=" lg:text-lg">Loans</a></li>
+                <li><a href="http://localhost:8080/web/pages/transfers.html" class=" lg:text-lg">Transactions</a></li>
+                <li v-on:click="logout()"><img class="w-6 h-6  md:w-10 md:h-10" src="../images/cerrar sesion.png"
+                    alt="cerrar sesion"></li>
             </ul>
-            <a href="" v-on:click="logout()" class="px-6 pt-2"><img class="w-10 h-10" src="../images/cerrar sesion.png"
-                    alt="cerrar sesion"></a>
         </header>
-        <main id="app" class=" min-h-screen flex flex-col pt-10 pb-10 h-1/2">
-            <h1 class="w-full text-4xl font-semibold pt-10 pb-3 md:pl-28">Welcome, {{data.firstName}}!</h1>
-            <div class="carrousel">
+        <main class=" flex flex-col p-7 ">
+            <h1 class="w-full text-lg md:text-4xl font-semibold pt-9 md:pl-28">Welcome, {{data.firstName}}!</h1>
+            <div class="py-2">
                 <div class="grande">
-                    <img src="../images/banner1-merrycristmas.jpg" alt="Imagen 1" class="img">
-
+                    <img src="../images/banner1-merrycristmas.jpg" alt="Imagen 1" class="rounded-xl">
                 </div>
             </div>
-            <div v-if="accounts.length < 3" class="mt-2">
-                <button type="reset" class="bg-orange-500 py-2 px-4 rounded-full font-bold text-xl" @click="newAccount()">New Account</button>
+            <div v-if="accounts.length < 3" class="pb-2">
+                <button type="reset" class="bg-orange-500 py-1 text-sm px-4 rounded-full font-bold md:text-xl" 
+                @click="newAccount()">Request another account</button>
               </div>
-            <div class="flex flex-col justify-around md:flex-row">
+            <div class="flex flex-col justify-center items-center xl:flex-row lg:gap-2">
                 <template v-if="accounts.length > 0" v-for="account in accounts">
                     <div
-                        class="flex flex-col pl-3 w-1/2 gap-4 md:flex-row md:justify-center md:pt-10 md:pb-8 md:gap-28">
+                        class="flex flex-col xl:w-1/5 lg:w-1/2 pb-2  md:flex-row md:justify-center md:pt-2 ">
                         <article
-                            class="flex flex-col w-[220px] h-[210px] pb-4 items-center border border-black  px-2 md:w-[300px] md:h-[180px] gap-4 rounded-md">
-                            <h2 class="text-sm md:text-lg  font-semibold pt-2">Account Number: {{account.number}}</h2>
-                            <h2 class="text-sm md:text-lg  font-semibold">Amount:</h2>
-                            <p class="text-sm md:text-xl  font-semibold">{{formatBudget(account.balance)}}</p>
-                            <h2 class="text-sm md:text-lg  font-semibold">Creation Date: {{account.creationDate}}</h2>
-                            <a class="text-sm pepito md:text-lg hover:bg-orange-500 justify-center text-center font-semibold h-11 mt-5 rounded-2xl w-[180px]"
+                            class="flex flex-col w-[200px] lg:w-[300px] h-[180px] lg:h-[200px]  pb-4 items-center border border-black  px-2 md:w-[300px] md:h-[180px] gap-2 rounded-md">
+                            <h2 class="text-sm lg:text-lg  font-semibold pt-2">Account N°: {{account.number}}</h2>
+                            <h2 class="text-sm lg:text-lg  font-semibold">Amount:</h2>
+                            <p class="text-sm lg:text-lg  font-semibold">{{formatBudget(account.balance)}}</p>
+                            <h2 class="text-sm lg:text-lg  font-semibold">Creation Date: {{account.creationDate}}</h2>
+                            <a class="text-sm pepito md:mb-2 lg:text-lg py-1 hover:bg-orange-500 justify-center text-center font-semibold mt-2 rounded-2xl w-[180px]"
                                 :href="'account.html?id='+account.id">my transactions</a>
                         </article>
                     </div>
                 </template>
-                <div class="flex flex-col w-1/2 justify-start items-center pt-6" v-if="loans.length > 0">
-                    <h2 class="w-full text-2xl text-center text-orange-600 font-semibold pt-10 pb-3">Your Loans</h2>
+                <div class="flex flex-col md:pt-5 lg:w-1/2 justify-start items-center" v-if="loans.length > 0">
+                    <h2 class=" text-lg md:text-2xl text-center text-orange-600 font-semibold  pb-3">Your Loans</h2>
                     <table
-                        class="w-[250px] items-center text-xs md:w-[480px] border justify-center  md:text-lg  text-left overflow-x-auto">
+                        class="w-[300px]  items-center text-xs  md:w-[460px] border justify-center  md:text-lg  text-left overflow-x-auto">
                         <thead>
                             <tr class="bg-orange-100">
                                 <th>Name</th>
@@ -81,17 +80,17 @@
                 </div>
             </div>
         </main>
-        <footer class=" bg-black ">
+        <footer class=" bg-black mt-2">
             <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
                 <div class="md:flex md:justify-between">
                   <div class="flex items-center mb-6 md:mb-0">
-                          <img src="../images/favicon.png" class="h-8 me-3" alt="Logo" />
-                          <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Unity Bank</span>
+                          <img src="../images/favicon.png" class="h-8 w-8 me-3" alt="Logo" />
+                          <span class="self-center text-sm md:text-2xl font-semibold whitespace-nowrap dark:text-white">Unity Bank</span>
                   </div>
                   <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
                       <div>
-                          <h2 class="mb-6 text-lg font-semibold text-gray-900  dark:text-white">Resources</h2>
-                          <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                          <h2 class="mb-6 text-sm md:text-lg font-semibold text-gray-900  dark:text-white">Resources</h2>
+                          <ul class="text-gray-500 text-xs dark:text-gray-400 font-medium">
                               <li class="mb-4">
                                   <a href="#" class="hover:underline">Vue Js</a>
                               </li>
@@ -101,8 +100,8 @@
                           </ul>
                       </div>
                       <div>
-                          <h2 class="mb-6 text-lg font-semibold text-gray-900  dark:text-white">Follow us</h2>
-                          <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                          <h2 class="mb-6 text-sm md:text-lg font-semibold text-gray-900  dark:text-white">Follow us</h2>
+                          <ul class="text-gray-500 text-xs dark:text-gray-400 font-medium">
                               <li class="mb-4">
                                   <a href="#" class="hover:underline ">Github</a>
                               </li>
@@ -112,8 +111,8 @@
                           </ul>
                       </div>
                       <div>
-                          <h2 class="mb-6 text-lg font-semibold text-gray-900 dark:text-white">Legal</h2>
-                          <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                          <h2 class="mb-6 text-sm md:text-lg font-semibold text-gray-900 dark:text-white">Legal</h2>
+                          <ul class="text-gray-500 text-xs dark:text-gray-400 font-medium">
                               <li class="mb-4">
                                   <a href="#" class="hover:underline">Privacy Policy</a>
                               </li>
@@ -126,7 +125,7 @@
               </div>
               <hr class="my-6 border-gray-200 sm:mx-auto dark:border-orange-600 lg:my-8" />
               <div class="sm:flex sm:items-center sm:justify-between">
-                  <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 UNITY BANK. All Rights Reserved.
+                  <span class="text-xs md:text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 UNITY BANK. All Rights Reserved.
                   </span>
                   <div class="flex mt-4 sm:justify-center sm:mt-0">
                       <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
