--- a/src/main/resources/static/web/pages/cardCreate.html
+++ b/src/main/resources/static/web/pages/cardCreate.html
@@ -10,24 +10,24 @@
 </head>
 <body>
     <div id="app">
-        <header class="w-full ">
-            <div class="pb-2 flex flex-row items-center">
-                <img class="w-12 h-12 rounded-md" src="../images/favicon.png" alt="logo">
-                <h2 class="text-lg  text-center pl-3 ">UNITY BANK</h2>
+        <header class="w-full xl:h-12 flex-col md:flex-row">
+            <div class="pb-2 w-1/4 flex flex-row items-center ">
+                <img class="w-8 h-8 rounded-md" src="../images/favicon.png" alt="logo">
+                <h2 class="text-sm text-center  ">UNITY BANK</h2>
             </div>
-            <ul class="nav-list pt-2 ">
-                <li><a href="http://localhost:8080/web/pages/accounts.html" class=" text-lg">Accounts</a></li>
-                <li><a href="#" class="active text-lg">Cards</a></li>
-                <li><a href="http://localhost:8080/web/pages/loan-application.html" class="text-lg">Loans</a></li>
-                <li><a href="http://localhost:8080/web/pages/transfers.html" class="text-lg">Transactions</a></li>
+            <ul class="nav-list  pt-2 xl:gap-10 xl:w-full 2xl:w-full 2xl:gap-12 2xl:text-xl">
+                <li><a href="http://localhost:8080/web/pages/accounts.html" class=" lg:text-lg">Accounts</a></li>
+                <li><a href="http://localhost:8080/web/pages/cards.html" class=" lg:text-lg">Cards</a></li>
+                <li><a href="http://localhost:8080/web/pages/loan-application.html" class=" lg:text-lg">Loans</a></li>
+                <li><a href="http://localhost:8080/web/pages/transfers.html" class=" lg:text-lg">Transactions</a></li>
+                <li v-on:click="logout()"><img class="w-6 h-6  md:w-10 md:h-10" src="../images/cerrar sesion.png"
+                    alt="cerrar sesion"></li>
             </ul>
-            <button v-on:click="logout()" class="px-6 pt-2"><img class="w-10 h-10" src="../images/cerrar sesion.png"
-                    alt="cerrar sesion"></button>
         </header>
         <main class=" min-h-screen flex justify-center items-center">
             <div
-                class="flex justify-center items-center w-[450px] h-[350px] flex-col gap-4 bg-grahidient-to-t from-orange-700 to-orange-500 p-4 rounded-lg">
-                <form class="flex gap-4 flex-col text-lg text-white">
+                class="flex justify-center items-center w-[450px] h-[350px] flex-col gap-4 bg-orange-400 p-4 rounded-lg">
+                <form class="flex gap-4 flex-col text-lg">
                     <div>
                         <label>Choose color</label>
                         <select class="mt-1 block w-full text-black p-2 border  rounded-md " v-model="selectedColor">
@@ -45,7 +45,7 @@
                     </div>
                     <div class="flex justify-center">
                         <button type="button" v-on:click="createCard()"
-                            class="bg-white hover:scale-110 text-orange-600 py-2 px-4 rounded">Create new
+                            class="bg-orange-200 hover:scale-110 text-orange-700 py-2 px-4 rounded-xl">Create new
                             Card</button>
                     </div>
                 </form>
