--- a/src/main/resources/static/web/pages/accounts.html
+++ b/src/main/resources/static/web/pages/accounts.html
@@ -72,6 +72,7 @@
                             </template>
                         </tbody>
                     </table>
+                    <button class="w-full mt-2 "><a class="bg-orange-500  text-white rounded-xl px-2 py-1" href="http://localhost:8080/web/pages/loan-application.html">Apply</a></button>
                 </div>
                 <div class="flex justify-center items-center pt-6" v-else>
                     <h2 class="w-full text-4xl text-center font-semibold text-orange-600 pt-10 pb-3 ">Does Not Have
